# test-app-wpf

./: .env.example  .gitignore  README.md  activar.bat  activar.ps1  gauge.properties  manifest.json  pyproject.toml  requirements.txt
docs/: setup.md  usage.md
specs/: example.spec  wpf_automation.spec
src/: __init__.py
src/data/: __init__.py  test_data.py
src/drivers/: __init__.py  winapp_driver.py
src/pages/: __init__.py  base_page.py
src/utils/: __init__.py  config.py  helpers.py
step_impl/: __init__.py  step_implementation.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_wpf_app.py
tests/unit/: __init__.py  test_utils.py
